--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="container bg-primary">
+<div class="container bg-warning">
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 </div>
